# coq-tactician-api

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile_base  Makefile  Makefile_get_commit.sh  README.md  check-stubs.sh  ci-update-base.sh  config.in  coq-tactician-api.opam  coq-tactician-api.opam.template  coq-tactician-reinforce.opam  coq-tactician-reinforce.opam.locked  coq-tactician-reinforce.opam.pretemplate  coq-tactician-reinforce.opam.template  dag_api.capnp  dune  dune-project  environment.yml  gen-pdoc.sh  graph_api.capnp  labelled_graph_api.capnp  pyproject.toml  setup.py
.github/workflows/: ci.yml  ci_docker.yml  ci_pytact.yml
datasets/current/: README  README.md  add_license.py  conda.sh  make_dataset.sh  stage1.sh  stage2.sh  stage3.sh
datasets/v15-opam-coq8.11-partial/: README.md  make_dataset.sh  stage1.sh
pytact/: README.md  __init__.py  common.py  dag_sanity_check.py  data_reader.py  data_reader.pyi  data_reader.pyx  dataset_reader.py  fake_coq_client.py  fake_coq_server.py  fake_python_server.py  fake_reinforcement_client.py  generate_api.py  graph_api.capnp  graph_api_capnp_cython.pxd  graph_api_capnp_cython.pyx  graph_sanity_check.py  graph_visualize.py  graph_visualize_browse.py  labelled_graph_api.capnp  labelled_graph_sanity_check.py  mypy-allowlist.txt  oracle_server.py  prover.py  read_graph.py  read_labelled_graph.py  repack.py  visualisation_webserver.py  visualize_file.py
pytact/resources/: labelled_graph_api.capnp
pytact/scripts/: __init__.py  analyze_oracle.py  check_axioms.py  largest_global_context.py  lemma_distance.py  lemma_size.py  lemmas_new_tactic.py  print_tactic_hash.py  ssreflect_dependees.py  web.py
pytact/templates/: capnp_cython.pxd  capnp_cython.pyx  visualizer.html
pytact/tests/: ReinforceTest.v  TestReinforceStdin.v  TestReinforceTcp.v  prop4.txt  prop41.txt
python/: fake_coq_server.py  fake_reinforcement_client.py  graph_sanity_check.py  graph_visualize.py  labelled_graph_sanity_check.py  read_dag.py  read_labelled_graph.py
src/: __experimental__.ml  dag_capnp_generator.ml  dag_def.ml  dag_extractor.ml  dag_generator_learner.ml  dag_visualizer.ml  definition_order.ml  dune  explore.ml  extreme_tactic_normalize.ml  g_graph.mlg  graph_capnp_generator.ml  graph_def.ml  graph_extractor.ml  graph_generator_learner.ml  graph_generator_learner.ml.in  graph_visualizer.ml  labelled_graph_capnp_generator.ml  labelled_graph_def.ml  labelled_graph_extractor.ml  labelled_graph_generator_learner.ml  labelled_graph_generator_learner.ml.in  labelled_graph_visualizer.ml  neural_learner.ml  nn_embedding_learner.ml  reinforce.ml  symmetric_diff.ml  tactic_availability_learner.ml  tactic_hash.ml  tactic_one_variable.ml  visualizer.ml
templates/: visualizer.html
tests/: GraphTest.v  bug_server_name_overload_a.v  bug_server_name_overload_b.v  bug_server_name_overload_c.v  external-tests.sh  server_test0.v  server_test1.v  server_test3.v  server_textmode_test.v
theories/: NNLearner.v  NNLearner.v.in  ReinforceTest.v  dune  injection-flags-loader  injection-flags-loader.in  plugin_deps_generate_conf.ml
