(lang dune 2.9)
(using dune_site 0.1)
(name coq-tactician-api)
(using coq 0.3)
(generate_opam_files true)

(source (github coq-tactician/coq-tactician-api))
(homepage "https://coq-tactician.github.io")
(authors "Lasse Blaauwbroek <lasse@blaauwbroek.eu>")
(maintainers "Lasse Blaauwbroek <lasse@blaauwbroek.eu>")

(package
 (name coq-tactician-api)
 (synopsis "An API exposing Coq's web of formal knowledge to external agents")
 (description ""))
