(lang dune 2.9)
(using dune_site 0.1)
(name coq-tactician-api)
(using coq 0.3)
(generate_opam_files true)

(source (github coq-tactician/coq-tactician-api))
(homepage "https://coq-tactician.github.io")
(authors "Lasse Blaauwbroek <lasse@blaauwbroek.eu>")
(maintainers "Lasse Blaauwbroek <lasse@blaauwbroek.eu>")

(package
 (name coq-tactician-api)
 (synopsis "An API exposing Coq's web of formal knowledge to external agents")
 (description
   "Tactician's API provides external machine learning agents with the data
   collected by Tactician from the Coq Proof Assistant. It is able to extract
   large-scale datasets from a wide variety of Coq packages for the purpose of
   offline machine learning. Additionally, it allows agents to interact with
   Coq. Proving servers can be connected to Tactician's `synth` tactic and prove
   theorems for Coq users. Additionally, servers can do proof exploration
   through the `Tactician Explore` command."))
